debugged some errors

--- a/resident_homepage.html
+++ b/resident_homepage.html
@@ -14,9 +14,9 @@
             <img src="landingpageimages/image-removebg-preview.png" alt="logo" width="160" height="130">
         </div>
         <nav class="nav">
-            <a href="#payments" style="--1">PAYMENTS</a>
-            <a href="#maintenance" style="--1">MAINTENANCE</a>
-            <a href="#guests" style="--1">GUESTS</a>
+            <a href="#payments" style="--1:>PAYMENTS</a>
+            <a href="#maintenance" style="--1:>MAINTENANCE</a>
+            <a href="#guests" style="--1:>GUESTS</a>
             <form action="/search" method="get">
                 <input type="text" placeholder="Search" name="query">
                 <input type="submit" value="Search">
