corrected some errors

--- a/resident_homepage.html
+++ b/resident_homepage.html
@@ -35,7 +35,7 @@
             <section id="rental-payments">
                 <h2>Rental Payments</h2>
                 <p>Make your online rent payments here.</p>
-                <button onclick="window.open('payment.php', '_blank')">Make Payment</button>
+                <button onclick="window.open('payment.html', '_blank')">Make Payment</button>
             </section>
             
 
