--- a/payment.html
+++ b/payment.html
@@ -14,45 +14,79 @@
             font-family: "Rubik", sans-serif;
         }
         .card {
-            width: 310px;
+            width: 350px;
             border: none;
             border-radius: 15px;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
-        .mpesa {
-            background-color: green !important;
+        .payment-tabs {
+            display: flex;
+            justify-content: space-around;
+            margin-bottom: 20px;
+        }
+        .payment-tab {
+            padding: 10px 20px;
+            border-radius: 20px;
+            color: #8d9297;
+            background-color: #f3f4f6;
+            font-weight: bold;
+            cursor: pointer;
+            text-align: center;
+        }
+        .payment-tab.active {
+            background-color: #28a745;
+            color: #fff;
+        }
+        .form-label {
+            font-weight: bold;
+            color: #333;
+        }
+        .form-control {
+            border-radius: 8px;
+        }
+        .btn-success {
+            background-color: #28a745;
+            border: none;
+            border-radius: 8px;
+            font-weight: bold;
+        }
+        .btn-success:hover {
+            background-color: #218838;
         }
     </style>
 </head>
 <body>
-    <div class="container d-flex justify-content-center">
-        <div class="card mt-5 px-3 py-4">
-            <div class="d-flex flex-row justify-content-around">
-                <div class="mpesa"><span>Mpesa</span></div>
-                <div><span>Paypal</span></div>
-                <div><span>Card</span></div>
+    <div class="container d-flex justify-content-center mt-5">
+        <div class="card">
+            <!-- Payment Tabs -->
+            <div class="payment-tabs">
+                <div class="payment-tab active">Mpesa</div>
+                <div class="payment-tab">Paypal</div>
+                <div class="payment-tab">Card</div>
             </div>
-            <div class="media mt-4 pl-2">
-                <img src="./images/1200px-M-PESA_LOGO-01.svg.png" class="mr-3" height="75" />
+            <!-- Payment Header -->
+            <div class="media mb-4">
+                <img src="./images/1200px-M-PESA_LOGO-01.svg.png" height="50" class="mr-3" alt="Mpesa Logo">
                 <div class="media-body">
-                    <h6 class="mt-1">Enter Amount & Number</h6>
+                    <h6 class="mt-2">Enter Amount & Number</h6>
                 </div>
             </div>
-            <div class="media mt-3 pl-2">
-                <!-- Payment Form -->
-                <form class="row g-3" action="payment.php" method="POST">
-                    <div class="col-12">
-                        <label for="amount" class="form-label">Amount</label>
-                        <input type="text" class="form-control" name="amount" placeholder="Enter Amount" required>
-                    </div>
-                    <div class="col-12">
-                        <label for="phone" class="form-label">Phone Number</label>
-                        <input type="text" class="form-control" name="phone" placeholder="Enter Phone Number" required>
-                    </div>
-                    <div class="col-12">
-                        <button type="submit" class="btn btn-success" name="submit" value="submit">Donate</button>
-                    </div>
-                </form>
-            </div>
+            <!-- Payment Form -->
+            <form action="payment.php" method="POST">
+                <div class="form-group">
+                    <label for="amount" class="form-label">Amount</label>
+                    <input type="text" class="form-control" name="amount" placeholder="Enter Amount" required>
+                </div>
+                <div class="form-group mt-3">
+                    <label for="phone" class="form-label">Phone Number</label>
+                    <input type="text" class="form-control" name="phone" placeholder="Enter Phone Number" required>
+                </div>
+                <div class="form-group mt-4">
+                    <button type="submit" class="btn btn-success btn-block" name="submit" value="submit">Donate</button>
+                </div>
+            </form>
         </div>
     </div>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
