integrated stk into payment.php

--- a/payment.html
+++ b/payment.html
@@ -69,7 +69,7 @@
             <!-- Payment Header -->
             <div class="media mb-4">
                 <img src="./images/1200px-M-PESA_LOGO-01.svg.png" height="50" class="mr-3" alt="Mpesa Logo">
-                <div class="media-body">
+                <div class="media-body"><br>
                     <h6 class="mt-2">Enter Amount & Number</h6>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                     <input type="text" class="form-control" name="phone" placeholder="Enter Phone Number" required>
                 </div>
                 <div class="form-group mt-4">
-                    <button type="submit" class="btn btn-success btn-block" name="submit" value="submit">Donate</button>
+                    <button type="submit" class="btn btn-success btn-block" name="submit" value="submit">Pay</button>
                 </div>
             </form>
         </div>
