--- a/register.html
+++ b/register.html
@@ -7,6 +7,16 @@
     <title>Register - Real Estate Management</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style1.css">
+
+    <script>
+        // To show the document upload field if Property Owner is selected
+        function toggleDocumentUpload() {
+            const role = document.getElementById("role").value;
+            const documentUpload = document.getElementById("documentUploadField");
+            documentUpload.style.display = (role === "PropertyOwner") ? "block" : "none";
+        }
+    </script>
+
     <script>
         function validateForm() {
             const password = document.getElementById("password").value;
@@ -66,6 +76,13 @@
                     <option value="PropertyOwner">Property Owner</option>
                     <option value="Helpline">Helpline</option>
                 </select><br><br>
+
+                    <!-- Document upload for Property Owner only -->
+                <div id="documentUploadField" style="display:none;">
+                    <label for="ownershipDocument">Upload Proof of Ownership:</label>
+                    <input type="file" id="ownershipDocument" name="ownershipDocument" accept=".pdf,.jpg,.jpeg,.png" required>
+                </div>
+
             </fieldset>
         
             <!-- Submit Button -->
