--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="#amenities"style="--3">AMENITIES</a>
             <a href="#contact"style="--4">CONTACT</a>
             <a href="login.html"style="--5">LOGIN</a>
-            <a href="register.php"style="--6">REGISTER</a>
+            <a href="register.html"style="--6">REGISTER</a>
         </nav>
     </header>
     <section>
