--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
         <!-- Optional Links for Registration/Password Reset -->
         <p>
             Don't have an account? <a href="register.html">Register here</a><br>
-            Forgot your password? <a href="#">Reset here</a>
+            Forgot your password? <a href="request_reset.html">Reset here</a>
         </p>
     </form>
 </body>
