fixed registration for residents

--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     <div class="logo">
         <img src="landingpageimages/image-removebg-preview.png" alt="logo" width="160" height="130">
     </div>
-    <form action="login.php" method="POST"> 
+    <form action="login.php" method="POST">
         <!-- Email Input -->
         <label for="email">Email:</label><br>
         <input type="email" id="email" name="email" required><br><br>
@@ -27,7 +27,7 @@
         <!-- Optional Links for Registration/Password Reset -->
         <p>
             Don't have an account? <a href="register.html">Register here</a><br>
-            Forgot your password? <a href="request_reset.html">Reset here</a>
+            Forgot your password? <a href="#">Reset here</a>
         </p>
     </form>
 </body>
