--- a/register.html
+++ b/register.html
@@ -40,7 +40,7 @@
                 <label for="role">Register as:</label><br>
                 <select id="role" name="role" required>
                     <option value="">Select Role</option>
-                    <option value="Resident">Resident</option>
+                    <option value="Tenant">Resident</option>
                     <option value="PropertyOwner">Property Owner</option>
                     <option value="Helpline">Helpline</option>
                 </select><br><br>
