added the view properties page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="headlinesection">
                 <h1>ROSEWOOD PARK ESTATE<br>ELEVATE YOUR LIVING</h1>
                 <h3>Rosewood park estate is one of the best estates in kilimani<br>It is a peaceful and serene place to live in</h3>
-                <a href=""><button class="btn"><span>BOOK A HOUSE</span></button></a>
+                <a href="view_properties.php"><button class="btn"><span>BOOK A HOUSE</span></button></a>
             </div>
             <div class="backpic"><img src="landingpageimages/paint.png" ></div>
         </div>
