--- a/success.html
+++ b/success.html
@@ -4,9 +4,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Successful</title>
+    <style>
+        /* General reset */
+        body, h1, p, a {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* Body styling */
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: beige; 
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .logo {
+        position: absolute;
+        top: 20px;
+        left: 40px;
+        text-align: right;
+        }
+
+        /* Main container */
+        .container {
+            background: #fff;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            width: 90%;
+            max-width: 400px;
+        }
+
+        /* Heading styling */
+        h1 {
+           
+            font-size: 1.5rem;
+            margin-bottom: 15px;
+        }
+
+        /* Paragraph styling */
+        p {
+            font-size: 1rem;
+            color: #555;
+            margin-bottom: 20px;
+        }
+
+        /* Link styling */
+        a {
+            text-decoration: none;
+            color: #fff;
+            background-color: #f38181; /* Soft pink button */
+            padding: 5px 10px;
+            border-radius: 8px;
+            display: inline-block;
+            transition: background-color 0.3s ease;
+        }
+
+        a:hover {
+            background-color: #e76969; /* Darker pink for hover */
+        }
+    </style>
 </head>
 <body>
-    <h1>Registration Successful!</h1>
-    <p>Your account has been successfully created. You can now <a href="login.html">log in</a>.</p>
+    <div class="logo">
+        <img src="landingpageimages/image-removebg-preview.png" alt="logo" width="160" height="130">
+    </div>
+    <div class="container">
+        <h1>Registration Successful!</h1>
+        <p>Your account has been successfully created. You can now <a href="login.html">log in</a>.</p>
+    </div>
 </body>
 </html>
