Added view requests button  to resident homepage

--- a/resident_homepage.html
+++ b/resident_homepage.html
@@ -37,7 +37,10 @@
             <section id="maintenance-requests">
                 <h2>Maintenance Requests</h2>
                 <p>Submit maintenance requests and track their status.</p>
-                <button onclick="openModal('submitRequestModal')">Submit Request</button>
+                <div class="button-container">
+                    <button onclick="openModal('submitRequestModal')">Submit Request</button>
+                    <button onclick="window.open('view_requests.html', '_blank')">View Requests</button>
+                </div>
             </section>
 
             <section id="notifications">
@@ -223,5 +226,27 @@
             <a href="#"><img src="landingpageimages/logo.png" alt="whatsapp" height="20px" width="20px"></a>
         </div>
     </footer>
+
+    <style>
+        .button-container {
+            display: flex;
+            gap: 10px; /* Space between the buttons */
+        }
+
+        .button-container button {
+            padding: 10px 20px;
+            background-color: #4CAF50; /* Green color */
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s;
+        }
+
+        .button-container button:hover {
+            background-color: #45a049; /* Darker green on hover */
+        }
+    </style>
 </body>
 </html>
